@@ -8,8 +8,13 @@ einfo() { echo -ne "\033[1;30m>\033[0;36m>\033[1;36m> \033[0m${@}\n" ;}
 ewarn() { echo -ne "\033[1;30m>\033[0;33m>\033[1;33m> \033[0m${@}\n" ;}
 eerror() { echo -ne "\033[1;30m>\033[0;31m>\033[1;31m> ${@}\033[0m\n" ;}
 
-droptoshell() {
-	if [ $rescueshell = 'false' ]; then
+InitializeBusybox() {
+	einfo "Create all the symlinks to /bin/busybox."
+	run busybox --install -s
+}
+
+rescueshell() {
+	if [ "$rescueshell" = 'false' ]; then
 		ewarn "Dropping to rescueshell because of above error."
 	fi
 	ewarn "Rescue Shell (busybox's /bin/sh)"
@@ -18,7 +23,7 @@ droptoshell() {
 	/bin/sh
 	}
 
-run() { "$@" || ( eerror $@ 'failed.' ; droptoshell ) ;}
+run() { "$@" || ( eerror $@ 'failed.' ; rescueshell ) ;}
 
 get_opt() {
 	echo "$@" | cut -d "=" -f 2,3
@@ -35,13 +40,14 @@ resolve_device() {
 	
 	if [ -z "$(eval echo \$$1)" ]; then
 		eerror "Wrong UUID/LABEL."
-		droptoshell
+		rescueshell
 	fi
 }
 
 use() {
 	name="$(eval echo \$$1)"
-	if [ -n "$name" ] && [ "$name" = 'true' ]; then
+	# Check if $name isn't empty and if $name isn't set to false or zero.
+	if [ -n "${name}" ] && [ "${name}" != 'false' ] && [ "${name}" != '0' ]; then
 		if [ -n "$2" ]; then
 			$2
 		else
@@ -58,22 +64,22 @@ dodir() {
 	done
 }
 
-initluks() {
+InitializeLUKS() {
 	if [ ! -f /bin/cryptsetup ]; then
 		eerror "There is no cryptsetup binary into initramfs image."
-		droptoshell
+		rescueshell
 	fi
 
 	if [ -z $enc_root ]; then
 		eerror "You have enabled luks but your \$enc_root variable is empty."
-		droptoshell
+		rescueshell
 	fi
 	
 	einfo "Opening encrypted partition and mapping to /dev/mapper/enc_root."
 	resolve_device enc_root
 	if [ -z $enc_root ]; then
         	eerror "\$enc_root variable is empty. Wrong UUID/LABEL?"
-	        droptoshell
+	        rescueshell
 	fi
 
 	# Hack for cryptsetup which trying to run /sbin/udevadm.
@@ -83,19 +89,19 @@ initluks() {
 	run cryptsetup luksOpen "${enc_root}" enc_root
 }
 
-initlvm() {
+InitializeLVM() {
 	einfo "Scaning all disks for volume groups."
 	run lvm vgscan
 	run lvm vgchange -a y
 }
 
-initmdadm() {
+InitializeSoftwareRaid() {
 	einfo "Scaning for software raid arrays."
 	mdadm --assemble --scan
 	mdadm --auto-detect
 }
 
-dotuxonice() {
+TuxOnIceResume() {
 	if [ ! -z $resume ]; then
 		if [ ! -f /sys/power/tuxonice/do_resume ]; then
 			ewarn "Your kernel do not support TuxOnIce.";
@@ -108,7 +114,7 @@ dotuxonice() {
 	fi
 }
 
-mountdev() {
+MountDev() {
 	einfo "Initiating /dev (devtmpfs)."
 	if ! mount -t devtmpfs devtmpfs /dev 2>/dev/null; then
 	ewarn "Unable to mount devtmpfs, missing CONFIG_DEVTMPFS? Switching to busybox's mdev."
@@ -120,10 +126,21 @@ mountdev() {
 	fi
 }
 
-mountroot() {
-	mountparams="-o ro"
+MountRootFS() {
+	rootfsmountmode="ro"
+	mountparams="-o ${rootfsmountmode}"
 	if [ -n "$rootfstype" ]; then mountparams="$mountparams -t $rootfstype"; fi
-	einfo "Mounting rootfs to /newroot."
+	einfo "Initiating /newroot (${rootfsmountmode})."
 	resolve_device root
 	run mount $mountparams "${root}" /newroot
+}
+
+
+rootdelay() {
+	if [ "${rootdelay}" -gt 0 2>/dev/null ]; then
+		einfo "Waiting $(get_opt $rootdelay)s (rootdelay)"
+		run sleep $(get_opt $rootdelay)
+	else
+		ewarn "\$rootdelay variable must be numeric and greater than zero. Skipping rootdelay."
+	fi
 }
